[package]
name = "rusht"
description = "Shell commands written in Rust"
version = "1.0.0"
edition = "2021"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://github.com/mverleg/rusht"
license = "BSD-3-Clause"
publish = true

[lib]
name = "rusht"
path = "src/lib.rs"

[[bin]]
name = "cmadd"
path = "src/cmd/main_add.rs"

[[bin]]
name = "cmdo"
path = "src/cmd/main_do.rs"

[[bin]]
name = "cmlist"
path = "src/cmd/main_list.rs"

[[bin]]
name = "cmdrop"
path = "src/cmd/main_drop.rs"

[[bin]]
name = "cached"
path = "src/cached/main_cached.rs"

[[bin]]
name = "unique"
path = "src/filter/main_unique.rs"

[[bin]]
name = "grab"
path = "src/filter/main_grab.rs"

[[bin]]
name = "dir_with"
path = "src/find/main_dir_with.rs"

[[bin]]
name = "locked"
path = "src/wait/main_locked.rs"

[[bin]]
name = "rusht"
path = "src/main_all.rs"

[dependencies]
#structopt = "*"
clap = { version = "3.2.8", default-features = true, features = ["std", "derive", "unicode"] }
#walkdir = "*"
lazy_static = "1.4.0"
regex = "1.6.0"
itertools = "0.10.3"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
chrono = { version = "0.4.19", features = ["std", "clock", "serde"] }
#strum = "*"
#strum_macros = "*"
dirs = "4.0.0"
log = "0.4.17"
env_logger = "0.9.0"
memoize = "0.3.0"
rand = "0.8.5"
ustr = "0.8.1"
parse_duration0 = "3.0.0"
smallvec = "1.9.0"
sha2 = "0.10.2"
base64 = "0.13.0"
rayon = "1.5.3"
dashmap = "5.3.4"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.56"
async-spsc = "0.1.0"
atomicbox = "0.4.0"

[dev-dependencies]
tempfile = "3.3.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

