[package]
name = "rusht"
description = "Shell commands written in Rust"
version = "1.0.0"
edition = "2021"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://github.com/mverleg/rusht"
license = "BSD-3-Clause"
publish = true

[lib]
name = "rusht"
path = "src/lib.rs"

[[bin]]
name = "cmadd"
path = "src/cmd/main_add.rs"

[[bin]]
name = "cmdo"
path = "src/cmd/main_do.rs"

[[bin]]
name = "cmlist"
path = "src/cmd/main_list.rs"

[[bin]]
name = "cmdrop"
path = "src/cmd/main_drop.rs"

[[bin]]
name = "cached"
path = "src/cached/main_cached.rs"

[[bin]]
name = "unique"
path = "src/filter/main_unique.rs"

[[bin]]
name = "filter"
path = "src/filter/main_filter.rs"

[[bin]]
name = "grab"
path = "src/filter/main_grab.rs"

[[bin]]
name = "dir_with"
path = "src/find/main_dir_with.rs"

[[bin]]
name = "locked"
path = "src/wait/main_locked.rs"

[[bin]]
name = "namesafe"
path = "src/escape/main_namesafe.rs"

[[bin]]
name = "mvnw"
path = "src/java/main_mvnw.rs"

[[bin]]
name = "rusht"
path = "src/main_all.rs"

[dependencies]
clap = { version = "3.2.15", default-features = true, features = ["std", "derive", "unicode"] }
lazy_static = "1.4.0"
regex = "1.6.0"
itertools = "0.10.3"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
bincode = "2.0.0-rc.1"
time = { version = "0.3.11", features = ["serde"] }
dirs = "4.0.0"
log = "0.4.17"
env_logger = "0.9.0"
memoize = "0.3.0"
rand = "0.8.5"
ustr = "0.9.0"
parse_duration0 = "3.0.0"
smallvec = "1.9.0"
sha2 = "0.10.2"
base64 = "0.13.0"
rayon = "1.5.3"
dashmap = "5.3.4"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.56"

[dev-dependencies]
tempfile = "3.3.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

