[package]
name = "rusht"
description = "Shell commands written in Rust"
version = "1.2.0"
edition = "2021"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://github.com/mverleg/rusht"
license = "BSD-3-Clause"
publish = true
include = [
    "**/*.rs",
    "Cargo.toml",
    "resource/**/*",
]
default-run = "rusht"

[lib]
name = "rusht"
path = "src/lib.rs"

[[bin]]
name = "cmadd"
path = "src/cmd/main_add.rs"

[[bin]]
name = "cmdo"
path = "src/cmd/main_do.rs"

[[bin]]
name = "cmlist"
path = "src/cmd/main_list.rs"

[[bin]]
name = "cmdrop"
path = "src/cmd/main_drop.rs"

[[bin]]
name = "cmbuf"
path = "src/cmd/main_buf.rs"

[[bin]]
name = "cached"
path = "src/cached/main_cached.rs"

[[bin]]
name = "unique"
path = "src/filter/main_unique.rs"

[[bin]]
name = "filter"
path = "src/filter/main_filter.rs"

[[bin]]
name = "grab"
path = "src/filter/main_grab.rs"

[[bin]]
name = "dir_with"
path = "src/find/main_dir_with.rs"

[[bin]]
name = "locked"
path = "src/wait/main_locked.rs"

[[bin]]
name = "namesafe"
path = "src/escape/main_namesafe.rs"

[[bin]]
name = "mvnw"
path = "src/java/main_mvnw.rs"

[[bin]]
name = "mon"
path = "src/observe/main_mon.rs"

[[bin]]
name = "piped"
path = "src/observe/main_piped.rs"

[[bin]]
name = "jl"
path = "src/observe/main_jl.rs"

[[bin]]
name = "rsh"
path = "src/rsh/main_rsh.rs"

[[bin]]
name = "rusht_debug"
path = "src/main_debug.rs"
required-features = ["experimental"]

#TODO @mverleg: shtest

[[bin]]
name = "rusht"
path = "src/main_all.rs"

[dependencies]
clap = { version = "4.0.29", default-features = true, features = ["std", "derive", "unicode"] }
lazy_static = "1.4.0"
regex = "1.7.0"
itertools = "0.10.5"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
bincode = "2.0.0-rc.2"
time = { version = "0.3.17", features = ["serde"] }
dirs = "4.0.0"
log = "0.4.17"
env_logger = "0.10.0"
memoize = "0.3.3"
rand = "0.8.5"
ustr = "0.9.0"
parse_duration0 = "3.0.0"
smallvec = "1.10.0"
sha2 = "0.10.6"
base64 = "0.20.0"
rayon = "1.6.1"
dashmap = "5.4.0"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
async-trait = "0.1.60"
futures = "0.3.25"
num_cpus = "1.15.0"
git2 = "0.15.0"
derive_more = "0.99.17"
#cpal = "0.14.0"
which = "4.3.0"
fs_extra = "1.2.0"
tempfile = "3.3.0"
#ssh2 = { version = "0.9.3", features = ["vendored-openssl"] }  # ssh2 is used transitively, use this to enable vendor feature
egui = { version = "0.20.1", optional = true }
eframe = { version = "0.20.1", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true }

[features]
experimental = ["egui", "eframe", "tracing-subscriber"]

[dev-dependencies]

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

