[package]
name = "rusht_find"
version = "0.1.0"
edition = "2021"
publish = false

#[[bin]]
#name = "logcount"
#path = "src/log_stats.rs"

[lib]
name = "rusht_find"
path = "src/lib.rs"

[[bin]]
name = "unique"
path = "src/main_unique.rs"

[dependencies]
rusht_common = { path = "../rusht_common" }
structopt = "*"
walkdir = "*"
lazy_static = "*"
regex = "*"
itertools = "*"
dirs = "*"
log = "*"
env_logger = "*"
ustr = "*"
